--- a/scRNAseq/.gitattributes
+++ b/scRNAseq/.gitattributes
@@ -1,1 +1,3 @@
 MouseCortex.mat filter=lfs diff=lfs merge=lfs -text
+MouseCortex2.mat filter=lfs diff=lfs merge=lfs -text
+PredRep.mat filter=lfs diff=lfs merge=lfs -text
